--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -45,9 +45,10 @@ jobs:
         run: |
           npm run coverage
 
-#      - name: SonarCloud Scan
-#        run: |
-#          npm run sonar
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarqube-scan-action@v4
+        env:
+          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
 
       - name: Build
         run: |
