--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,8 @@
-sonar.organization=teemoo7
+sonar.organization=teemoo7-github
 sonar.projectKey=teemoo7_jass-game
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.sources=./src
+sonar.language=ts
+sonar.tests.inclusions=./test/**/*.test.ts
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.sourceEncoding=UTF-8
