--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
+    "jsdom": "^26.0.0",
     "prettier": "3.4.2",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
